# Loadstar-Data-Center-Siting-and-Power

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .vercelignore  ASSUMPTIONS.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: __init__.py
api/app/: main.py
api/app/core/: config.py  db.py
api/app/routers/: meta.py  optimizer.py  sites.py
api/app/schemas/: optimizer.py  sites.py
api/app/services/: meta_service.py  optimizer_service.py  site_service.py
backend/api/: main.py  openapi_schema.py
backend/api/core/: config.py  logging.py
backend/api/middleware/: __init__.py  request_id.py
backend/api/repositories/: __init__.py  site_repository.py
backend/api/routers/: __init__.py  agent.py  errors.py  meta.py  optimizer.py  sites.py
backend/api/services/: __init__.py  agent_service.py  cache_keys.py  llm_service.py  meta_service.py  optimizer_jobs.py  optimizer_service.py  result_cache.py  site_service.py  source_artifacts_service.py  tts_service.py
backend/db/: 001_initial.sql  002_postgres.sql  003_optimization_runs_status.sql  003_optimization_runs_status_sqlite.sql  connection.py  migrate.py
backend/engine/: __init__.py  assumptions.py  contracts.py  fixtures.py  normalization.py  optimizer.py  optimizer_constants.py  optimizer_model.py  optimizer_outputs.py  optimizer_profiles.py  scoring.py
backend/engine/data/: europe_sites.json
backend/pipeline/: _feature_blending.py  _feature_context.py  _helpers.py  _layers.py  _network.py  _value_parsers.py  access_check.py  alphaearth_land.py  alphaearth_land_artifacts.py  alphaearth_land_earth_engine.py  alphaearth_land_labels.py  alphaearth_land_outputs.py  alphaearth_land_types.py  alphaearth_land_utils.py  artifacts.py  build_layer_assets.py  constants.py  feature_engineering.py  hourly_carbon.py  hourly_price.py  pypsa_network.py  siting_model.py  siting_model_artifacts.py  siting_model_dataset.py  siting_model_trainer.py  siting_model_types.py  subset_ingestion.py
backend/tests/api/: test_agent_chat.py  test_agent_explain.py  test_agent_speech.py  (+9 more)
db/: 001_initial.sql  migrate.py
ember/: ember.md  ingest.py
engine/: assumptions.py  contracts.py  fixtures.py  optimizer.py  scoring.py
eval/: alphaearth_land_metrics.json  siting_model_metrics.json
frontend/: .env.example  .prettierignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: demo-path.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
pipeline/: __init__.py  access_check.py
public/docs/: access_decisions.md  architecture.md  demo_rehearsal.md  invertix_datacenter_siting_system_design.md  invertix_questions.md  plan.md  technical_architecture_pitch.md
scripts/: build_europe_dataset.mjs
tests/api/: test_api_skeleton.py
tests/db/: test_schema.py
tests/pipeline/: test_access_check.py
web/: eslint.config.js  index.html  package-lock.json  package.json
web/src/: main.tsx
(+95 files in other folders)
