[project]
name = "loadstar"
version = "0.1.0"
description = "Data-center siting and power planning skeleton for the Invertix challenge"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "lightgbm",
  "numpy",
  "pydantic",
  "pydantic-settings",
  "pyright",
  "ruff",
  "typer",
  "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["backend/api", "backend/engine", "backend/pipeline"]
# Earth Engine and other external SDKs lack type stubs; the access-check CLI is a
# tactical decision-record tool, not part of the strict-typed surface.
exclude = ["backend/pipeline/access_check.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
