[project]
name = "loadstar"
version = "0.1.0"
description = "Data-center siting and power planning skeleton for the Invertix challenge"
license = { text = "MIT" }
requires-python = ">=3.13"
# Runtime dependencies only. Vercel may install from this list, so it must match
# the lean set in requirements.txt. Pipeline-only packages live in the
# `pipeline` extra below and are excluded from the serverless function.
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "psycopg[binary]",
  "scipy",
  "google-genai>=1.0",
]

[project.optional-dependencies]
# Data ingestion and ML training. The API never imports these.
pipeline = [
  "earthengine-api",
  "lightgbm",
  "numpy",
  "typer",
]
dev = [
  "pyright",
  "pytest",
  "ruff",
]

# Vercel deploys the FastAPI app as a single Python Serverless Function. This
# points the Python runtime at the existing ASGI app (which also serves the
# built SPA + static assets), so the whole product runs from one Vercel project.
[tool.vercel]
entrypoint = "backend.api.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["backend/api", "backend/engine", "backend/pipeline"]
# Earth Engine and other external SDKs lack type stubs; the access-check CLI is a
# tactical decision-record tool, not part of the strict-typed surface.
exclude = ["backend/pipeline/access_check.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
